SERVER-56105 Make $split expression behave the same in SBE and classic engine