src/mongo/db/query/sbe_stage_builder_expression.cpp
@@ -2390,12 +2390,22 @@ public:
                                 _context->runtimeEnvironment);
         };
 
-        // Check that each argument exists, is not null, and is a string. Fails if the delimiter is
-        // an empty string. Returns [""] if the string input is an empty string, otherwise calls
-        // builtinSplit.
+        auto checkIsNullOrMissing = makeBinaryOp(sbe::EPrimBinary::logicOr,
+                                                 generateNullOrMissing(stringExpressionRef),
+                                                 generateNullOrMissing(delimiterRef));
+
+        // In order to maintain MQL semantics, first check both the string expression
+        // (first agument), and delimiter string (second argument) for null, undefined, or
+        // missing, and if either is nullish make the entire expression return null. Only
+        // then make further validity checks against the input. Fail if the delimiter is an empty
+        // string. Return [""] if the string expression is an empty string.
         auto totalSplitFunc = buildMultiBranchConditional(
-            CaseValuePair{generateNullOrMissing(delimiterRef),
+            CaseValuePair{std::move(checkIsNullOrMissing),
                           sbe::makeE<sbe::EConstant>(sbe::value::TypeTags::Null, 0)},
+            CaseValuePair{generateNonStringCheck(stringExpressionRef),
+                          sbe::makeE<sbe::EFail>(
+                              ErrorCodes::Error{5155402},
+                              str::stream() << "$split string expression must be a string")},
             CaseValuePair{
                 generateNonStringCheck(delimiterRef),
                 sbe::makeE<sbe::EFail>(ErrorCodes::Error{5155400},
@@ -2404,12 +2414,6 @@ public:
                           sbe::makeE<sbe::EFail>(
                               ErrorCodes::Error{5155401},
                               str::stream() << "$split delimiter must not be an empty string")},
-            CaseValuePair{generateNullOrMissing(stringExpressionRef),
-                          sbe::makeE<sbe::EConstant>(sbe::value::TypeTags::Null, 0)},
-            CaseValuePair{generateNonStringCheck(stringExpressionRef),
-                          sbe::makeE<sbe::EFail>(
-                              ErrorCodes::Error{5155402},
-                              str::stream() << "$split string expression must be a string")},
             sbe::makeE<sbe::EIf>(
                 generateIsEmptyString(stringExpressionRef),
                 sbe::makeE<sbe::EConstant>(arrayWithEmptyStringTag, arrayWithEmptyStringVal),
